--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@ li.dropdown{
 	font-style: italic;
 }
 
+.italic:active{
+	color: black;
+}
+
 ol{
     list-style-type: upper-roman;
     list-style-position: inside;
