--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ li.dropdown{
 }
 
 .italic{
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 	font-style: italic;
 }
 
