--- a/style.css
+++ b/style.css
@@ -136,13 +136,8 @@ li.dropdown{
     
 }
 
-.italic{
-	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+.i{
 	font-style: italic;
-}
-
-.italic:active{
-	color: black;
 }
 
 ol{
