--- a/style.css
+++ b/style.css
@@ -270,6 +270,10 @@ ol li{
     font-size: 20px;
 }
 
+.dafpus li{
+	margin-left: 0px;
+}
+
 .text-2{
     margin-top: -20px;
     background-color: rgba(255, 255, 255, 0.83);
