--- a/style.css
+++ b/style.css
@@ -274,6 +274,10 @@ ol li{
 	text-align: left;
 }
 
+.dafpus a{
+	padding: 1px;
+}
+
 .text-2{
     margin-top: -20px;
     background-color: rgba(255, 255, 255, 0.83);
